--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ a:hover {
 .news {
 	background: #798F67;
 	margin-top: 10px;
+	margin-right: auto;
 	text-align: center;
 	color: white;
 	padding: 15px;
